# AACProcessors

./: .gitignore  Procfile  README.md  aacprocessor.py  demo_viewer.py  pyproject.toml  requirements.txt  setup.py  translation_cache.json
.github/workflows/: lint.yml  publish.yml  test.yml
aac_processors/: __init__.py  apple_panels_processor.py  base_processor.py  cli.py  coughdrop_processor.py  dot_processor.py  file_processor.py  gridset_old_processor.py  gridset_processor.py  opml_processor.py  pptx_processor.py  snap_processor.py  sqlite_processor.py  touchchat_processor.py  tree_structure.py  viewer.py
aac_processors/optional/: screenshot_processor.py  symbol_tools.py
api/: app.py  requirements.txt
demofiles/: SimpleTest_test.gridset
docs/: TobiiDynavox-Snap-Details.md
examples/: demo.py  demo_aacprocessors.ipynb  demoscreenshot.py  obf_to_panel.py  obf_to_pptx.py  pptx_to_obf.py  screenshot_to_obf.py  screenshot_to_panel.py
examples/demofiles/: output.gridset
tests/: conftest.py  test_all_processors_translation.py  test_base_processor.py  test_cli.py  test_coughdrop_processor.py  test_dot_processor.py  test_file_processor.py  test_gridset_processor.py  test_integration.py  test_opml_processor.py  test_pptx_processor.py  test_screenshot_processor.py  test_snap_processor.py  test_sqlite_processor.py  test_touchchat_processor.py  test_tree_structure.py  test_viewer.py
