[project]
name = "aac-processors"
version = "0.1.0"
description = "AAC Pageset Processing Tools"
authors = [
    {name = "Will Wade", email = "will@willwade.co.uk"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "black>=23.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "F", "I", "B", "W", "C90"]
ignore = []
line-length = 100
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["aac_processors"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=aac_processors"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["aac_processors"]
